--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error : no test specified\" && exit 1"
+    "test": "echo \"Error : no test specified\" && exit 1",
+    "build:ui": "rm -rf build && cd ../part2-notes/ && npm run build && cp -r build ../notes-backend",
+    "deploy": "git push heroku main",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Clara SMIS",
   "license": "ISC",
   "dependencies": {
     "cli-ux": "^6.0.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "typescript": "^4.6.3"
   },
