--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf build && cd ../part2-notes/ && npm run build && cp -r build ../notes-backend",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "Clara SMIS",
   "license": "ISC",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
+    "eslint": "^8.14.0",
     "nodemon": "^2.0.15"
   }
 }
